--- a/CayuseWebAPI/packages.config
+++ b/CayuseWebAPI/packages.config
@@ -7,4 +7,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="Unity" version="5.9.6" targetFramework="net461" />
 </packages>
